# ADY201m

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.py  docker-compose.yml  main.py  main_pipeline.py  pyproject.toml  run_dev.py  start_app.py
docs/: notes.md
models_comparison/: style.css
notebooks/: 01_Collect_and_Normalization.ipynb  01_pull_and_push.ipynb  02_sql_and_preprocessing.ipynb
preprocessing/: cross_validation.ipynb  data_cleaning.ipynb  model_building.ipynb  model_building_with_proxy_label.ipynb  model_building_without_proxy_label.ipynb  model_testing.ipynb  model_testing2.ipynb  model_testing3.ipynb  model_training.ipynb  models_report.md  models_report.xlsx  overview.md  report.md
src/: .env.example  App.css  index.css
src/Collect_and_Process/: Preprocessing.py  Process.py  collection.py
src/config/: db_config.py  dir_config.py
src/db/: analyzer.py  db_manager.py  init_db.py  schema.sql  utils.py
src/db/sql_queries/: accounting_anomalies.sql  fraud_rate.sql  get_anomalies.sql  get_feature.sql  get_fraud_rate.sql  get_patterns.sql  merchant_analysis.sql  mule_account_patterns.sql  rapid_cashout_window.sql  schema.sql
src/eda/: distribution_plt.py  matrix_corr.py  pie_chart.py  plt_quantiles.py  plt_type.py  quick_profile.py  top_fraud.py
src/etl/: cleaner.py  collect.py  pipeline.py  preprocessing.py
src/models/: evaluator.py  trainer.py  visualizer.py
src/utils/: file_helpers.py  hardware.py
web/backend/: main_api.py
web/backend/config/: dir_config.py  logs_config.py  (+1 more)
web/frontend/: package.json  pnpm-lock.yaml
(+24 files in other folders)
