[project]
name = "adym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
