[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "kagglehub>=1.0.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
    "xgboost>=3.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
